Add more text to about us section

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         <h3>About Us</h3>
         <p>At Meditation Bliss, we aim to create a serene space for individuals to practice mindfulness, reduce stress, and enhance their overall well-being.</p>
         <p>Meditation Bliss began as a small group of meditation enthusiasts and has grown into a vibrant community dedicated to the practice of mindfulness and meditation.</p>
+        <p>Our club is open to everyone, regardless of experience level. Whether you are looking to deepen your practice or simply want to explore the benefits of meditation, our club welcomes you with open arms.</p>
+        <p>Embark on a journey towards inner peace and mindfulness with the Meditation Bliss Club. Together, we can create a harmonious and supportive community dedicated to personal growth and well-being. Join us today and start your path to serenity.</p>
     </section>
     
     <section id="benefits">
