Chance footer font-size

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
         <div class="logo">Meditation Bliss</div>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
-        <label for="nav-toggle" class="nav-toggle-label">
+        <label for="nav-toggle" class="nav-toggle-label"></label>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
