Add blank target to form

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     
     <section id="sign-up">
         <h2>Sign-up</h2>
-        <form method="post" action="https://formdump.codeinstitute.net/">
+        <form method="post" action="https://formdump.codeinstitute.net/" target="_blank">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
             <label for="email">Email:</label>
