--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
     </header>
 
     <!-- Main content -->
-    
+
+    <main>
+
     <section id="home" class="banner">
         <div class="banner-content">
             <h1>Welcome to Meditation Bliss Club</h1>
@@ -77,7 +79,8 @@
             <button type="submit" class="btn">Send</button>
         </form>
     </section>
-    
+    </main>
+
     <!-- Footer -->
 
     <footer>
