--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!-- Stylesheet -->
 
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 
